# gzip-hpp

./: CMakeLists.txt
bench/: run.cpp
include/gzip/: compress.hpp  decompress.hpp  utils.hpp
test/: test_io.cpp  test_version.cpp
